--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://mmikolajewski02:p0IMfF3QFL0ZP8Az@cluster0.2u9dc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
 PORT=5000
